// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepPageHeader /> should render correctly a consultationStep 1`] = `
<div>
  <h2
    className="h2"
  >
    I am a title
  </h2>
  <div
    className="mb-30 project__step-dates"
  />
</div>
`;

exports[`<StepPageHeader /> should render correctly a consultationStep with a description 1`] = `
<div>
  <h2
    className="h2"
  >
    I am a title
  </h2>
  <div
    className="mb-30 project__step-dates"
  />
  <BodyInfos
    body="Je suis la belle description"
    maxLines={5}
  />
</div>
`;

exports[`<StepPageHeader /> should render correctly a questionnaireStep 1`] = `
<div>
  <h2
    className="h2"
  >
    I am a title
  </h2>
  <div
    className="mb-30 project__step-dates"
  />
</div>
`;

exports[`<StepPageHeader /> should render correctly a selectionStep 1`] = `
<div>
  <h2
    className="h2"
  >
    I am a title
  </h2>
  <div
    className="mb-30 project__step-dates"
  />
  <h4
    style={
      Object {
        "marginBottom": "20px",
      }
    }
  >
    <i
      className="cap cap-hand-like-2-1"
      style={
        Object {
          "color": "#377bb5",
          "fontSize": "22px",
        }
      }
    />
     
    <FormattedMessage
      id="proposal.vote.threshold.step"
      values={
        Object {
          "num": 1,
        }
      }
    />
  </h4>
</div>
`;
